--- a/lab3/Lab3.ipynb
+++ b/lab3/Lab3.ipynb
@@ -258,7 +258,9 @@
     "If we multiply the expression by -1 on both sides and isolate the log of the marginal likelihood we obtain:\n",
     "\n",
     "$$log p(x) = E_{q(\\theta)}[log(p(\\theta,x) - log q(\\theta)] + KL(q||p)$$\n",
-    "$$log p(x) = L(q) + KL(q||p)$$"
+    "$$log p(x) = L(q) + KL(q||p)$$\n",
+    "\n",
+    "The first component is the evidence lower bound. It serves a lower bound for the marginal log likelihood, and maximizing it is equivalent to minimizing the KL divergence between the approximate and true posterior (to see why the equivalence holds, consider that KL is always $\\geq$ 0 and $log p(x)$ is independent of the variational parameters found in $q(\\theta)$."
    ]
   },
   {
